--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,30 @@
 .page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: auto;
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding: 30px 80px 40px;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .content {
 }
 
 .footer {
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  color: #f2f2f2;
+  position: relative;
+  padding: 60px 80px;
 }
