--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,9 @@
 .page {
+  background-color: #fff;
+  background-image: url(./../images/background_header.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   min-width: 1100px;
   max-width: 1600px;
   margin: auto;
@@ -16,6 +21,169 @@
   padding: 30px 80px 40px;
   position: relative;
   box-sizing: border-box;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+
+.nav__links {
+  display: flex;
+  column-gap: 20px;
+  list-style-type: none;
+  padding: 0;
+  align-items: center;
+  position: absolute;
+  top: 30px;
+  right: 80px;
+}
+
+.nav__link {
+  color: #000;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.nav__link:hover {
+}
+
+.header {
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+}
+
+.header__title {
+  max-width: 729px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -1px;
+  margin-top: 183px;
+  margin-bottom: 28px;
+}
+
+.header__span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+
+.header__description {
+  max-width: 683px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__image {
+  z-index: 1;
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+}
+
+.header__footer {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.header__span-footer {
+  display: block;
+}
+
+.header__paragraph {
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 500;
+  color: #838383;
+}
+
+.header__paragraph_address {
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 500;
+  color: #838383;
+  position: absolute;
+  bottom: 40px;
+  right: 80px;
+  z-index: 1;
+}
+
+.recipes {
+  width: 100%;
+  background-color: #0a2750;
+  background-image: url(./../images/background_recipes.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+}
+
+.recipes__title {
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  max-width: 580px;
+  margin-left: 80px;
+  padding: 100px 0 24px 0;
+}
+
+.recipes__subtitle {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 438px;
+  margin-left: 80px;
+  padding-bottom: 80px;
+}
+
+.recipes__videos {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 215px;
+  gap: 40px;
+}
+
+.recipes__videos_paragraph {
+  display: flex;
+  justify-content: space-between;
+}
+
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+}
+
+.recipes__video-caption {
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .content {
