--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,64 @@
 .footer {
-  box-sizing: border-box;
-  background-color: #1f1f1f;
-  color: #f2f2f2;
-  position: relative;
-  padding: 60px 80px;
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  color: #fff;
+}
+
+.footer__content {
+  padding: 60px 100px 108px 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__logo {
+  width: 105px;
+  height: 39px;
+}
+
+.footer__social-heading {
+  margin: 0;
+  padding-bottom: 20px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__list-item {
+  display: flex;
+  gap: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.footer__social-link {
+  order: 1;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.footer__copyright {
+  padding: 0 0 60px 80px;
+  padding-bottom: 60px;
+  margin: 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
