--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,34 +1,30 @@
 .about {
   background-color: #0a2850;
   position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .about__title {
   max-width: 251px;
-  position: absolute;
-  top: 100px;
-  left: 80px;
-  font-family: "Inter";
-  font-style: normal;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
   color: #fff;
+  z-index: 1;
+  margin: 100px 0 0 80px;
+  margin-left: 80px;
 }
 
 .about__content {
-  position: absolute;
-  bottom: 113px;
-  right: 80px;
-  margin-top: 119px;
+  margin: 119px 80px 113px 0;
 }
 
 .about__paragraph {
   max-width: 660px;
   margin: 0 0 20px 0;
   font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   color: #fff;
@@ -43,4 +39,7 @@
   width: 426px;
   height: 426px;
   border-radius: 50%;
+  position: absolute;
+  top: -152px;
+  left: -129px;
 }
