--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,7 @@
 .footer__social-heading {
   margin: 0;
   padding-bottom: 20px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -34,11 +34,7 @@
 .footer__list-item {
   display: flex;
   gap: 10px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
+  font-family: "Inter", "Arial", sans-serif;
   align-items: center;
   justify-content: flex-start;
 }
@@ -56,9 +52,5 @@
   padding: 0 0 60px 80px;
   padding-bottom: 60px;
   margin: 0;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
+  font-family: "Inter", "Arial", sans-serif;
 }
