--- a/blocks/form.css
+++ b/blocks/form.css
@@ -16,9 +16,7 @@
   margin-bottom: 32px;
   box-sizing: border-box;
   height: 60px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
+  font-family: "Inter", "Arial", sans-serif;
   font-size: 20px;
   line-height: 30px;
 }
@@ -41,11 +39,8 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 8px;
-  font-family: "Inter";
-  font-style: normal;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
 }
 
 .form__span_checkbox {
@@ -56,11 +51,8 @@
 
 .form__button {
   border-radius: 2px;
-  font-family: "Inter";
-  font-style: normal;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
   margin-bottom: 32px;
   max-width: 385px;
   height: 60px;
