--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,7 +14,7 @@
 
 .header__title {
   max-width: 729px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
