--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -26,10 +26,8 @@
 .nav__link {
   color: #000;
   text-decoration: none;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
 }
 
 .nav__link:hover {
