--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -12,8 +12,7 @@
   margin: 0 0 80px 0;
   padding-top: 100px;
   align-self: center;
-  font-family: "Inter";
-  font-style: normal;
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
