--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,9 @@
 .header {
+  background-color: #fff;
+  background-image: url(./../images/background_header.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   height: 100vh;
   min-height: 720px;
   max-height: 800px;
@@ -35,6 +40,7 @@
 .header__description {
   max-width: 683px;
   font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
   font-size: 20px;
   line-height: 30px;
 }
