--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -14,7 +14,7 @@
   font-size: 44px;
   line-height: 52px;
   max-width: 580px;
-  margin-left: 80px;
+  margin: 0 0 0 80px;
   padding: 100px 0 24px 0;
 }
 
